updated controller, added render of main page in order to show the alert of incorrect URL