@@ -1,18 +1,17 @@
 package hexlet.code.controllers;
 
+import hexlet.code.dto.BasePage;
 import io.javalin.http.Context;
 
 import java.sql.SQLException;
-import java.util.Map;
+import java.util.Collections;
 
 public class RootController {
     public static void page(Context ctx) throws SQLException {
-        var flash = ctx.consumeSessionAttribute("flash");
-        var fType = ctx.consumeSessionAttribute("flash-type");
-
-        flash = flash == null ? "" : flash;
-        fType = fType == null ? "" : fType;
-        ctx.render("index.jte", Map.of("flash", flash, "fType", fType));
+        var page = new BasePage();
+        page.setFlash(ctx.consumeSessionAttribute("flash"));
+        page.setColor(ctx.consumeSessionAttribute("color"));
+        ctx.render("index.jte", Collections.singletonMap("page", page));
     }
 }
 
